--- a/example/styles/Home.module.css
+++ b/example/styles/Home.module.css
@@ -70,7 +70,7 @@
   align-items: center;
   justify-content: center;
   flex-wrap: wrap;
-  max-width: 77rem;
+  max-width: 800px;
 }
 
 .card {
@@ -106,20 +106,6 @@
 .logo {
   height: 1em;
   margin-left: 0.5rem;
-}
-
-.add_btn {
-  margin-top: 20px;
-  height: 40px;
-  width: 200px;
-  border: none;
-  font-weight: 700;
-}
-
-.add_btn:hover {
-  background-color: black;
-  color: #eaeaea;
-  cursor: pointer;
 }
 
 @media (max-width: 600px) {
