--- a/frontend/styles/Home.module.css
+++ b/frontend/styles/Home.module.css
@@ -122,6 +122,32 @@
   cursor: pointer;
 }
 
+.cart {
+  display: flex;
+  position: absolute;
+  top: 3rem;
+  right: 5rem;
+  cursor: pointer;
+}
+
+.cart span {
+  display: flex;
+  background-color: rgb(227, 34, 20);
+  color: white;
+  border-radius: 50%;
+  text-align: center;
+  align-items: center;
+  position: absolute;
+  font-size: 0.75rem;
+  font-weight: bold;
+  top: 0;
+  right: 0;
+  height: 20px;
+  min-width: 20px;
+  transform: translate(70%, -70%);
+  justify-content: center;
+}
+
 @media (max-width: 600px) {
   .grid {
     width: 100%;
