--- a/frontend/styles/Home.module.css
+++ b/frontend/styles/Home.module.css
@@ -73,79 +73,10 @@
   max-width: 77rem;
 }
 
-.card {
-  margin: 1rem;
-  padding: 1.5rem;
-  text-align: left;
-  color: inherit;
-  text-decoration: none;
-  border: 1px solid #eaeaea;
-  border-radius: 10px;
-  transition: color 0.15s ease, border-color 0.15s ease;
-  max-width: 300px;
-}
-
-.card:hover,
-.card:focus,
-.card:active {
-  color: #0070f3;
-  border-color: #0070f3;
-}
-
-.card h2 {
-  margin: 0 0 1rem 0;
-  font-size: 1.5rem;
-}
-
-.card p {
-  margin: 0;
-  font-size: 1.25rem;
-  line-height: 1.5;
-}
-
 .logo {
-  height: 1em;
-  margin-left: 0.5rem;
-}
-
-.add_btn {
-  margin-top: 20px;
-  height: 40px;
-  width: 200px;
-  border: none;
-  font-weight: 700;
-}
-
-.add_btn:hover {
-  background-color: black;
-  color: #eaeaea;
-  cursor: pointer;
-}
-
-.cart {
-  display: flex;
   position: absolute;
-  top: 3rem;
-  right: 5rem;
-  cursor: pointer;
-}
-
-.cart span {
-  display: flex;
-  background-color: rgb(227, 34, 20);
-  color: white;
-  border-radius: 50%;
-  text-align: center;
-  align-items: center;
-  position: absolute;
-  font-size: 0.75rem;
-  font-weight: bold;
   top: 0;
-  right: 0;
-  height: 20px;
-  min-width: 20px;
-  transform: translate(70%, -70%);
-  justify-content: center;
+  margin-top: 2rem;
 }
 
 @media (max-width: 600px) {
